--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && echo > dist/.nojekyll && gh-pages -d dist"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
