--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "vite build && echo > dist/.nojekyll && gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "vite": "^7.0.0"
