--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gh-pages": "^6.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-static-copy": "^3.1.1"
   }
 }
